version 0.5.24
	- Use the gettimeofday() rather than clock() timing mechanism by
	  default, since the latter seems to be unreliable on some systems

version 0.5.23 (11 March 2022)
	- C/Fortran interface to flotsam_analyse_phase_functions, which
	  now allows for phase functions to be provided on an irregular grid
	  in angle, useful for strongly forward-peaked phase functions
	- Halved resolution of ocean BRDF look-up table for speed

version 0.5.22 (6 March 2022)
	- Fixed Fortran interface (tested using a the flotsam branch of ecRad)
	- In phase_function_component.cpp, convolve phase_function now
	  correctly performed up to pf(FLOTSAM_NUM_SMOOTHING_VALUES,__),
	  thanks to Jeronimo Escribano

version 0.5.20 (16 February 2018)
	- Added SZA-dependent scaling of lobe radiances at low optical
	  depths to account for a similar effect that has already been
	  accounted for in diffuse fluxes
	- Tuned settings a little for aerosol cases

version 0.5.19 (16 February 2018)
	- Reverted prefactor on lobe calculation ("revision2") to ensure
	  energy conservation in fluxes
	- Reverted secants used in beam-to-diffuse exchange ("revision5")
	  to improve reflectance at low viewing angle
	- Generalized two-stream gamma1/gamma2 calculation since PIFM is
	  not theoretically correct for near isotropic phase functions
	- Increased scaling-up of diffuse fluxes since reference optical
	  depth should probably be only half the optical depth of the
	  profile
	- Tunables controlled more from base.hpp

version 0.5.18 (13 Febrary 2018)
	- Fix calculation of prob_direct_to.diffuse_[up|dn]
	- Fixed bug in polynomial smoothed phase function lookup
	- Instead of reading in phase_function_file, can specify the 6
	  components with phase_function_components, which uses the fitted
	  phase function for the direct component

version 0.5.17 (29 January 2018)
	- Predict the angular variance of the phase function and use to
	  interpolate smoothed phase function