@@ -1,7 +1,11 @@
-bin_PROGRAMS = flotsam
+bin_PROGRAMS = flotsam ocean_albedo
+
 flotsam_SOURCES = \
 	flotsam.cpp \
 	readconfig.c \
 	readconfig.h \
 	Timer.h
+
+ocean_albedo_SOURCES = ocean_albedo.cpp
+
 LDADD = ../src/.libs/libflotsam.a
